# oaem-web

./: .gitignore  README.md  nginx.conf
oaem-api/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
oaem-api/app/: __init__.py  cache.py  config.py  main.py  plotting.py  routes.py
oaem-frontend/: .gitignore  Dockerfile  docker-compose.yaml  package-lock.json  package.json
oaem-frontend/public/: index.html  manifest.json
oaem-frontend/src/: App.css  App.js
oaem-frontend/src/components/: CurrentPositionButton.css  CurrentPositionButton.js  Footer.css  Footer.js  Header.css  Header.js  HelpModal.css  HelpModal.js  LocationMarker.js  MapComponent.js  Modal.css  PlotComponent.css  PlotComponent.js
